Split Connection code from the main code.
This makes the classes smaller and much more easier to maintain.

--- a/Manos.MySql/Manos.MySql.csproj
+++ b/Manos.MySql/Manos.MySql.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Packets\PacketBuilder.cs" />
     <Compile Include="QueryCommand.cs" />
     <Compile Include="Row.cs" />
+    <Compile Include="MySqlClient.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
